[artifact-repository] Tidy up repository handling
* Fix broken handling of repositories in the CLI
* Provide default names for repositories
* Allow the URI based ArtifactRepository method to return Local Repositories

Signed-off-by: Tim Ward <timothyjward@apache.org>